--- a/tex/main.tex
+++ b/tex/main.tex
@@ -14,8 +14,9 @@
   style=numeric-comp,	% Zitationsstil
   ]{biblatex}
 
-%TODO: Add refs to text and bib
+
 \addbibresource{ref.bib}
+\graphicspath{{svg-inkscape/}} %TODO: Change includesvg to input
 
 \def\BibTeX{{\rm B\kern-.05em{\sc i\kern-.025em b}\kern-.08em
     T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}}
@@ -42,14 +43,12 @@
 %TODO: Einteilung der Einleitung in Motivation und Forschungsfrage?
 %TODO: Anderes wort für Abbildung
 %TODO: emph or not? Nur Abkürzungen?
-%TODO: Quellen ohne ref? => NO / Aussagen ohne Quellen? => YES / Quellen die nicht wissenschaftlich sind? = YES
-
 
 % title -->
 
 \begin{abstract}
 
-Software langlebig zu designen gewann über die Jahre immer mehr an Bedeutung. Beim Implementieren von neuen Anforderungen weiterhin die Applikation übersichtlich und fehlerfrei zu halten stellt  stets eine Herausforderung dar. Entwickler investieren heutzutage viel Zeit Software skalierbar, wartbar und flexibel zu gestalten. Durch die Einhaltung von etablierten Richtlinien, wie den SOLID-Prinzipien, kann ein verbessertes Softwaredesign verwirklicht werden. Somit ist das Maß an erhaltener Unterstützung bei der Implementierung dieser Prinzipien durch die gewählte unterliegende Architektur entscheidend. Die Analyse der Schichtenarchitektur zeigt, dass die SOLID-Prinzipien nur gering nativ verankert sind, jedoch eine hohe Simplizität beherbergt. Durch den grundlegenden Aufbau ist dieser Ansatz bei kleinen oder sogenannten CRUD-Applikationen zu bevorzugen. Bei hoher Priorität auf der Businesslogik ist eine Hexagonale Architektur vorteilhaft, da der Applikationskern in den Vordergrund gerückt wird. Durch die Einteilung in Ports und Adapter bei einem hexagonalen Ansatz wird die Anwendung der SOLID-Prinzipien vereinfacht. Durch die natürliche Entkopplung der Komponenten sind die Testbarkeit und Skalierbarkeit positiv betroffen. Letztendlich ist die Auswahl der Architektur abhängig von den Anwendungsfällen und die Verwirklichung der Designprinzipien ist in beiden Ansätzen vollständig möglich. 
+Software langlebig zu designen gewann über die Jahre immer mehr an Bedeutung. Beim Implementieren von neuen Anforderungen weiterhin die Applikation übersichtlich und fehlerfrei zu halten stellt  stets eine Herausforderung dar. Entwickler investieren heutzutage viel Zeit Software skalierbar, wartbar und flexibel zu gestalten. Durch die Einhaltung von etablierten Richtlinien, wie den SOLID-Prinzipien, kann ein verbessertes Softwaredesign verwirklicht werden. Somit ist das Maß an erhaltener Unterstützung bei der Implementierung dieser Prinzipien durch die gewählte unterliegende Architektur entscheidend. Die Analyse der Schichtenarchitektur zeigt, dass die SOLID-Prinzipien nur gering nativ verankert sind, jedoch eine hohe Simplizität beherbergt. Durch den grundlegenden Aufbau ist dieser Ansatz bei kleinen oder sogenannten CRUD-Applikationen zu bevorzugen. Bei hoher Priorität auf der Businesslogik ist eine Hexagonale Architektur vorteilhaft, da der Applikationskern in den Vordergrund gerückt wird. Durch die Einteilung in Ports und Adapter bei einem hexagonalen Ansatz wird die Anwendung der SOLID-Prinzipien vereinfacht. Durch die natürliche Entkopplung der Komponenten sind die Testbarkeit und Erweiterbarkeit positiv betroffen. Letztendlich ist die Auswahl der Architektur abhängig von den Anwendungsfällen und die Verwirklichung der Designprinzipien ist in beiden Ansätzen vollständig möglich. 
 
 \end{abstract}
 
@@ -64,7 +63,7 @@ Software, Design, Hexagonale Architektur, Schichtenarchitektur, SOLID
 
 
 
-Seit Jahrzehnten haben sich Softwaresysteme und ihre Architektur weiterentwickelt. Früher wurden Anwendungen entwickelt ohne viel Wert auf Zukunftssicherheit zu legen. Sie sollten meist nur eine einzige Aufgabe erfüllen und wurden nur in seltenen Fällen erweitert. Allerdings haben heutzutage immer mehr Geräte eingebaute Software und die Komplexität von Sourcecode steigt mit jedem Jahr, dadurch auch die verbundenen Entwicklungskosten. Viele Unternehmen besitzen eigens geschriebene Programme, welche stets durch Marktänderungen auf neue Anforderungen anpassbar sein sollten. Über die Jahre entsteht dadurch ein verwirrendes, fragiles Konstrukt aus Codezeilen, das potenziell bei jeder Änderung neue Fehler entwickeln kann, da diese Systeme nie designt waren jahrelang in Betrieb zu sein. Von diesen damals weitverbreiteten monolithischen Anwendungen sehen wir aktuell eher einen Aufschwung an kleinen, modularisierten Microservice-Architekturen. Diese bieten bei korrekter Anwendung unter anderem erhöhte Übersichtlichkeit, Skalierbarkeit, Testbarkeit und Wartbarkeit. \cite{Chen.2018} \cite{Dragoni.2017} Die Langlebigkeit der Systeme sollen durch die unterliegende Architektur, das Design der Komponenten und Softwaretests sichergestellt werden. Das unüberlegte Programmieren einer Lösung alleinig auf die jetzigen Anforderungen reicht somit in vielen Fällen heutzutage nicht mehr aus. Im Hinblick auf dieses Problem wurden verschiedene Architekturansätze und Designprinzipien entworfen, welche einem Programmierer helfen sollten eine solche stabile Anwendung zu entwickeln.
+Seit Jahrzehnten haben sich Softwaresysteme und ihre Architektur weiterentwickelt. Früher wurden Anwendungen entwickelt ohne viel Wert auf Zukunftssicherheit zu legen. Sie sollten meist nur eine einzige Aufgabe erfüllen und wurden nur in seltenen Fällen erweitert. Allerdings haben heutzutage immer mehr Geräte eingebaute Software und die Komplexität von Sourcecode steigt mit jedem Jahr und dadurch auch die verbundenen Entwicklungskosten. Viele Unternehmen besitzen eigens geschriebene Programme, welche stets durch Marktänderungen auf neue Anforderungen anpassbar sein sollten. Über die Jahre entsteht dadurch ein verwirrendes, fragiles Konstrukt aus Codezeilen, das potenziell bei jeder Änderung neue Fehler entwickeln kann, da diese Systeme nie designt waren jahrelang in Betrieb zu sein. Anstatt diesen damals weitverbreiteten monolithischen Anwendungen sehen wir aktuell eher einen Aufschwung an kleinen, modularisierten Microservice-Architekturen. Diese bieten bei korrekter Anwendung unter anderem erhöhte Übersichtlichkeit, Skalierbarkeit, Testbarkeit und Wartbarkeit. \cite{Chen.2018} \cite{Dragoni.2017} Die Langlebigkeit der Systeme soll durch die unterliegende Architektur, das Design der Komponenten und Softwaretests sichergestellt werden. Das unüberlegte Programmieren einer Lösung alleinig auf die jetzigen Anforderungen reicht somit in vielen Fällen heutzutage nicht mehr aus. Im Hinblick auf dieses Problem wurden verschiedene Architekturansätze und Designprinzipien entworfen, welche einem Programmierer helfen sollen eine solche stabile Anwendung zu entwickeln.
 
 Hierzu werden in den folgenden Abschnitten einige dieser Konzepte der Softwareentwicklung erläutert. Konkret werden als Beispiele für eine Softwarearchitektur die Schichten- und Hexagonale Architektur analysiert und bewertet. Zuvor muss allerdings ein grundlegendes Verständnis über Softwaredesign geschaffen werden, indem gängige Designrichtlinien aufgezählt und durchleuchtet werden.
 
@@ -82,34 +81,34 @@ Damit eine zukunftssichere Software gewährleistet werden kann, muss die Anwendu
 \subsection{Das SOLID-Akronym}
 
 %TODO: Mehr?
-Von Michael Feathers und Robert C. Martin geprägt, zählen die SOLID-Prinzipien zu dem Fundament eines stabilen Designs. \cite{martin.solid} \cite{Martin.2018} Sie erlauben Software auch bei steigender Komplexität weiterhin wartbar zu bleiben. Idealerweise sollte somit eine Softwarearchitektur den Entwickler bei der Anwendung dieser Prinzipien unterstützen. Für die nachfolgende Analyse liegen diese fünf Konzepte im Vordergrund.
+Von Michael Feathers und Robert C. Martin geprägt, zählen die SOLID-Prinzipien zu dem Fundament eines stabilen Designs. \cite{martin.solid} \cite{Martin.2018} Das Akronym setzt sich aus den Anfangsbuchstaben dieser fünf Richtlinien zusammen. Sie erlauben Software, auch bei steigender Komplexität, weiterhin wartbar zu bleiben. Idealerweise sollte somit eine Softwarearchitektur den Entwickler bei der Anwendung dieser Prinzipien unterstützen. Für die nachfolgende Analyse liegen diese fünf Konzepte im Vordergrund.
 
 
 
 \subsubsection{Single-Responsibility-Prinzip (SRP)} Durch die erste Richtlinie soll sichergestellt werden, dass die Verantwortlichkeit eines Moduls zu maximal einem Akteur gehört. Konkret darf jedes Modul nur für eine Anforderung zuständig sein. Beim definieren neuer Anwendungsfälle sollte somit jede Komponente maximal einmal angepasst werden müssen. Eine allgemeinere Variante besagt, dass jede Variable, Methode, Klasse usw. genau eine Aufgabe besitzen soll. Dadurch bleiben Module übersichtlich und die Anzahl der Abhängigkeiten gering. Dies erhöht die allgemeine Testbarkeit und schützt vor unerwarteten Nebeneffekten bei Codeanpassungen. Hingegen kann bei Verletzung eine enge Bindung der Klassen entstehen und die Software dadurch monolithische Eigenschaften entwickeln. \cite{martin.srp} \cite{Martin.2003} \cite{Martin.2018}
 
-Als Beispiel kann eine Funktion gesehen werden, welche überprüft, ob ein Passwort alle Sicherheitsanforderungen erfüllt. Die gleiche Funktion wird für sowohl Adminaccounts als auch für normale Benutzeraccounts verwendet. Anfangs sind die Anforderungen beider Passworttypen gleich und somit wird ein Passwortvalidator erstellt, welche beide Klassen benutzen (Abbildung \ref{fig:VorSRP}).
+Als Beispiel kann eine Funktion gesehen werden, welche überprüft, ob ein Passwort alle Sicherheitsanforderungen erfüllt. Die gleiche Funktion wird für sowohl Adminaccounts als auch für normale Benutzeraccounts verwendet. Anfangs sind die Anforderungen beider Passworttypen gleich und somit wird ein Validator erstellt, welche beide Klassen benutzen (Abbildung \ref{fig:VorSRP}).
 
 \begin{figure}[htbp]
 	\small
-	\includesvg[width=250pt]{img/VorSRP.svg}
+	\resizebox{250pt}{!}{\input{svg-inkscape/VorSRP_svg-tex.pdf_tex}}
 	\caption{Entgegen des \emph{SRP} verwenden beide Accountklassen den gleichen Validator}
 	\label{fig:VorSRP}
 \end{figure}
 
 
-Eine neue Anforderung sieht vor, dass Adminaccounts zukünftig eine höhere Passwort-Mindestlänge besitzen sollen. Eine unaufmerksame Änderung der Funktion hat somit eine Auswirkung auf beide Benutzeraccounts entgegen des \emph{Single-Responsibility-Prinzips}. Die Funktionen müssen somit wie in Figur \ref{fig:NachSRP} unterschiedliche Validatoren aufrufen. 
+Eine unaufmerksame Änderung der Funktion hat somit eine Auswirkung auf beide Benutzeraccounts entgegen des \emph{Single-Responsibility-Prinzips}. Eine neue Anforderung sieht vor, dass Adminaccounts zukünftig eine höhere Passwort-Mindestlänge besitzen sollen, die Grundbedingungen jedoch bleiben gleich. Die Funktionen müssen somit wie in Figur \ref{fig:NachSRP} unterschiedliche Klassen aufrufen. Der AdminPasswordValidator ruft hierbei die verify-Funktion des UserPasswordValidators auf, damit die Logik nicht dupliziert werden muss.
 
 \begin{figure}[htbp]
 	\small
 	\includesvg[width=250pt]{img/NachSRP.svg}
-	\caption{Anwendung des Single-Responsibility-Prinzip zur Passwortvalidierung}
+	\caption{Anwendung des Single-Responsibility-Prinzip zur Überprüfung der Passwortrichtlinien}
 	\label{fig:NachSRP}
 \end{figure}
 
 
 
-\subsubsection{Open-Closed-Prinzip (OCP)} Entwicklern soll es jederzeit möglich sein bereits bestehende Funktionalitäten anzupassen ohne dass der Code, welcher auf diese Funktionsweise basiert, bricht oder selbst abgeändert werden muss. Hierfür besagt das \emph{OCP}, dass Module einerseits offen für Erweiterungen, andererseits geschlossen gegenüber Veränderungen sein sollten. Dadurch gewinnt die Applikation an Stabilität und Flexibilität. Diese zwei gewünschten Aspekte kann unter anderem erreicht werden indem ein geschlossenes, fest definiertes Interface erstellt wird. Komponente können diese Schnittstelle und die benötigten Eigenschaften implementieren und weiterhin jederzeit mit neuen Feldern und Funktionen erweitert werden. Hierbei ist die Schnittstelle geschlossen und die konkrete Implementierung offen im Sinne des \emph{Open-Closed-Prinzip}. Durch Polymorphie ist es möglich die konkreten Implementierungen hinter dem Interface auszuwechseln. Damit bleiben Abhängigkeiten austauschbar und zusätzliche Anforderungen können leichter der Software hinzugefügt werden. \cite{Meyer.1993} \cite{Martin.2018}
+\subsubsection{Open-Closed-Prinzip (OCP)} Entwicklern soll es jederzeit möglich sein bereits bestehende Funktionalitäten anzupassen ohne dass der Code, welcher auf diese Funktionsweise basiert, bricht oder selbst abgeändert werden muss. Hierfür besagt das \emph{OCP}, dass Module einerseits offen für Erweiterungen, andererseits geschlossen gegenüber Veränderungen sein sollten. Dadurch gewinnt die Applikation an Stabilität und Flexibilität. Diese zwei gewünschten Aspekte kann unter anderem erreicht werden indem ein geschlossenes, fest definiertes Interface erstellt wird. Komponenten können diese Schnittstelle und die benötigten Eigenschaften implementieren und weiterhin jederzeit mit neuen Feldern und Funktionen erweitert werden. Hierbei ist die Schnittstelle geschlossen und die konkrete Implementierung offen im Sinne des \emph{Open-Closed-Prinzip}. Durch Polymorphie ist es möglich die konkreten Implementierungen hinter dem Interface auszuwechseln. Damit bleiben Abhängigkeiten austauschbar und zusätzliche Anforderungen können leichter der Software hinzugefügt werden. \cite{Meyer.1993} \cite{Martin.2018}
  
 Angewandt an das vorherige Passwortbeispiel ist es möglich ein Interface für den Validator zu definieren, welches die benötigte Funktion bereitstellt. Obwohl das Interface an sich als unveränderlich gilt können jederzeit weitere Validatoren hinzugefügt werden, welche die bestehenden Funktionalitäten der Abstraktion implementieren und darüber hinaus erweitern können (Abbildung \ref{fig:OCP}). 
 
@@ -124,7 +123,7 @@ Angewandt an das vorherige Passwortbeispiel ist es möglich ein Interface für d
 
 \subsubsection{Liskovsches Substitutionsprinzip (LSP)} Das in 1994 von Barbara Liskov und Jeannette Wing definierte Prinzip besagt, dass eine Unterklasse S einer Oberklasse T die Korrektheit einer Anwendung nicht beeinflussen soll, wenn ein Objekt vom Typ T durch ein Objekt vom Typ S ersetzt wird. Hierbei werden einige Bedingungen an die Unterklasse gestellt. Unter anderem dürfen die Vorbedingungen einer Methode in einem Subtyp nicht strenger sein als in der Oberklasse und schwächere Nachbedingungen nicht erzwungen werden. Dadurch erhalten Klassen höhere Wiederverwendbarkeit und die Applikation erhält reduzierte Fehleranfälligkeit. \cite{Leavens.2000} \cite{Martin.2018}
 
-Als konkretes Beispiel hierfür kann die Oberklasse Benutzer (Typ T) und die Unterklasse Admin (Typ S) verwendet werden. Die Adminklasse überschreibt hierbei die vererbte Methode zum Überprüfen der Passwörter, allerdings sind die Vorbedingungen bzw. Sicherheitsbedingungen strenger. Dadurch kann die Methode ein anderes Ergebnis liefern, wenn ein Benutzertyp substituiert wird durch ein Objekt der Adminklasse, falls das übergebene Passwort zwar die Bedingungen eines Benutzerpassworts erfüllt, allerdings nicht die eines Adminpassworts (Abbildung \ref{fig:VorLSP}). Um die Einhaltung des \emph{LSP} zu garantieren, sollten die beiden Klassen unabhängig voneinander designt werden.
+Als konkretes Beispiel hierfür kann die Oberklasse Benutzer (Typ T) und die Unterklasse Admin (Typ S) verwendet werden. Die Adminklasse überschreibt hierbei die vererbte Methode zum Überprüfen der Passwörter, allerdings sind die Vorbedingungen bzw. Sicherheitsbedingungen strenger. Dadurch kann die Methode ein anderes Ergebnis liefern, wenn ein Benutzertyp durch ein Objekt der Adminklasse substituiert wird, falls das übergebene Passwort zwar die Bedingungen eines Benutzerpassworts erfüllt, allerdings nicht die eines Adminpassworts (Abbildung \ref{fig:VorLSP}). Um die Einhaltung des \emph{LSP} zu garantieren, sollten die beiden Klassen unabhängig voneinander designt werden.
 
 
 \begin{figure}[htbp]
@@ -138,27 +137,27 @@ Als konkretes Beispiel hierfür kann die Oberklasse Benutzer (Typ T) und die Unt
 
 \subsubsection{Interface-Segregation-Prinzip (ISP)} In vor allem monolithischen Systemen finden sich oft riesige Interfaces mit einer Vielzahl von Funktionen. Dadurch wird die Software undurchsichtig und komplex. Das \emph{ISP} soll dies verhindern, da Clients nie gezwungen sein sollen Schnittstellen zu verwenden, welche mehr Funktionalitäten bereitstellen als sie benötigen. Dadurch werden Interfaces übersichtlicher und abhängige Komponenten sind mehr entkoppelt. Zusätzlich hilft dieses Prinzip die Einhaltung des \emph{Single-Responsibility-Prinzip} zu gewährleisten, indem die Schnittstellen nur eine Verantwortung erfüllen.  \cite{Martin.2003} \cite{Martin.2018}
 
-Beispielhaft bietet im Schaubild \ref{fig:VorISP} ein Interface der Datenzugriffsschicht Funktionen zur Speicherung unterschiedlicher Entitäten an. Somit sind Service der Applikationsschicht abhängig von einem Interface mit Funktionen, welche die einzelnen Komponenten nicht benötigen. Zu beachten ist ebenfalls, dass auch das \emph{SRP} hierbei gebrochen wird.
+Beispielhaft bietet im Schaubild \ref{fig:VorISP} ein Interface der Datenzugriffsschicht Funktionen zur Manipulation und Suche von Benutzern an. Ein Service, welcher Benutzer löschen soll, die sich seit langer Zeit nicht mehr eingeloggt haben, ist somit abhängig von einem Interface, welches Funktionen bereitstellt, die für diese Aufgabe gar nicht benötigt werden. 
 
 \begin{figure}[htbp]
 	\small
 	\includesvg[width=250pt]{img/VorISP.svg}
-	\caption{Abhängigkeit zwischen Klassen und einem großen Interface bricht das \emph{ISP} }
+	\caption{Abhängigkeit zwischen Service und einem großen Interface bricht das \emph{ISP} }
 	\label{fig:VorISP}
 \end{figure}
 
-Damit eine Applikation von den oben genannten positiven Eigenschaften profitieren kann, muss die Schnittstelle durch eine Extraktion der Methoden aufgeteilt werden (Abbildung \ref{fig:NachISP}).
+Damit eine Applikation von den oben genannten positiven Eigenschaften profitieren kann, wird die Schnittstelle durch Extraktion der Methoden in kleinere Interfaces aufgeteilt (Abbildung \ref{fig:NachISP}). Der HousekeepingService besitzt dadurch nur wirklich benötigte Abhängigkeiten. 
 
 \begin{figure}[htbp]
 	\small
 	\includesvg[width=250pt]{img/NachISP.svg}
-	\caption{Geringere Kopplung der Service durch kleinere, spezifischere Schnittstellen} 
+	\caption{Geringere Kopplung durch kleinere, spezifischere Schnittstellen} 
 	\label{fig:NachISP}
 \end{figure}
 
 
 
-\subsubsection{Dependency-Inversion-Prinzip (DIP)} Um Software flexibler und anpassbarer zu gestalten, sollten die Module so unabhängig wie möglich von anderen Modulen designt werden. Änderungen an dem Quelltext bergen das Risiko unerwünschte Nebeneffekte zu erzeugen oder zwingen den Entwickler auch Anpassungen an weiteren Modulen vorzunehmen. Durch eine lose Kopplung sollen solche Situationen vermieden werden. Der erste Teil des \emph{Dependency-Inversion-Prinzips} besagt, dass konzeptionell höherliegende Komponenten nicht direkt von darunterliegenden Komponenten abhängig sein sollen, sondern die Kommunikation zwischen ihnen über eine abstrakte Schnittstelle geschieht. Das in der Abbildung \ref{fig:VorDIP} beschriebene Beispiel sollte somit die Schichten durch Interfaces entkoppeln, da sie auf unterschiedlichen Abstraktionsebenen liegen. Der zweite Abschnitt des Prinzips befasst sich wie diese Schnittstellen designt werden, um eine höhere Wiederverwendbarkeit der höheren Ebenen zu gewährleisten. Das Interface sollte hiernach nicht an die Implementierung gekoppelt sein, sondern die Details sollten von der Abstraktion abhängen. Details können hierbei je nach Fokus der Applikation die konkreten Implementierungen oder die Businesslogik sein. Bei richtiger Anwendung können dadurch unterliegende Module ausgetauscht werden, ohne die Korrektheit des Programms zu gefährden, solange die Abstraktionsschicht gleich ist. \cite{Martin.1996} \cite{Martin.2003} \cite{Martin.2018}
+\subsubsection{Dependency-Inversion-Prinzip (DIP)} Um Software flexibler und anpassbarer zu gestalten, sollten die Module so unabhängig wie möglich von anderen Modulen designt werden. Änderungen an dem Quelltext bergen das Risiko unerwünschte Nebeneffekte zu erzeugen oder zwingen den Entwickler auch Anpassungen an weiteren Modulen vorzunehmen. Durch eine lose Kopplung sollen solche Situationen vermieden werden. Zusätzlich ist es möglich konkrete Implementierungen hinter den Abstraktionen ohne weitere Anpassungen auszutauschen. Dies ermöglicht das Testen von Klassen frei von ihren Abhängigkeiten, indem diese durch Dummy-Objekte substituiert werden. Der erste Teil des \emph{Dependency-Inversion-Prinzips} besagt, dass konzeptionell höherliegende Komponenten nicht direkt von darunterliegenden Komponenten abhängig sein sollen, sondern die Kommunikation zwischen ihnen über eine Schnittstelle geschieht. Das in der Abbildung \ref{fig:VorDIP} beschriebene Beispiel sollte somit die Schichten durch Interfaces entkoppeln, da sie auf unterschiedlichen Abstraktionsebenen liegen. Der zweite Abschnitt des Prinzips befasst sich damit, wie diese Schnittstellen designt werden, um eine höhere Wiederverwendbarkeit der höheren Ebenen zu gewährleisten. Das Interface sollte hiernach nicht an die Implementierung gekoppelt sein, sondern die Details sollten von der Abstraktion abhängen. Details können hierbei je nach Fokus der Applikation die konkreten Implementierungen oder die Businesslogik sein. Bei richtiger Anwendung können dadurch unterliegende Module ausgetauscht werden, ohne die Korrektheit des Programms zu gefährden, solange die Abstraktionsschicht gleich ist. \cite{Martin.1996} \cite{Martin.2003} \cite{Martin.2018}
 
 \begin{figure}[htbp]
 	\small
@@ -167,7 +166,7 @@ Damit eine Applikation von den oben genannten positiven Eigenschaften profitiere
 	\label{fig:VorDIP}
 \end{figure}
 
-In der Abbildung \ref{fig:VorDIP} sind dabei beide Teile des \emph{DIP} verletzt. Dies wird in Figur \ref{fig:NachDIP} korrigiert indem Details von hinzugefügten Schnittstellen abhängig gemacht werden. Das BenutzerBusinessInterface wird hierbei entweder dem BenutzerAPIService oder BenutzerBusinessService zugewiesen. Stehen die Businessanforderungen im Vordergrund, so sollte die Zuteilung der Schnittstelle zur Businessebene stattfinden. Die Details sind somit die API-Schicht und Datenzugriffsschicht. 
+In der Abbildung \ref{fig:VorDIP} sind dabei beide Teile des \emph{DIP} verletzt. Dies wird in Figur \ref{fig:NachDIP} korrigiert, indem Details von hinzugefügten Schnittstellen abhängig gemacht werden. Das BenutzerBusinessInterface wird hierbei entweder dem BenutzerAPIService oder BenutzerBusinessService zugewiesen. Stehen die Businessanforderungen im Vordergrund, so sollte die Zuteilung der Schnittstelle zur Businessebene stattfinden. Die Details sind somit die API-Schicht und Datenzugriffsschicht. 
 
 \begin{figure}[htbp]
 	\small
@@ -190,7 +189,7 @@ In der Abbildung \ref{fig:VorDIP} sind dabei beide Teile des \emph{DIP} verletzt
 
 \subsection{Weitere Bewertungskriterien} Es gibt zahlreiche Qualitätsattribute für Software, welche je nach Kontext der Anforderungen unterschiedliche Gewichtung tragen. Die vorher aufgelisteten Prinzipien wirken sich auf diese Eigenschaften positiv aus. Für die nachfolgende Analyse sind drei Indikatoren von großer Bedeutung. 
 
-\emph{Testbarkeit} definiert im welchen Maße Module unabhängig voneinander getestet werden können, ohne dabei Änderungen an Architektur oder den Modulen selbst vornehmen zu müssen. \emph{Skalierbarkeit} hingegen beschreibt wie einfach eine Anwendung erhöhte Lasten abarbeiten kann, indem einzelne Teile bzw. die ganze Applikation weitere Ressourcen zur Verfügung gestellt bekommt. Auch wie übersichtlich und anpassbar eine Applikation auch bei steigender Anzahl an Codezeilen bleibt, spielt bei Skalierbarkeit eine Rolle. \emph{Einfachheit} charakterisiert wie viel Erfahrung und Aufwand erfordert wird, um die gewählte Architektur korrekt umzusetzen.
+\emph{Testbarkeit} definiert im welchen Maße Module unabhängig voneinander getestet werden können, ohne dabei Änderungen an Architektur oder den Modulen selbst vornehmen zu müssen. \emph{Erweiterbarkeit} hingegen beschreibt wie übersichtlich und anpassbar eine Applikation auch bei steigender Anzahl an Codezeilen bleibt. \emph{Erlernbarkeit} charakterisiert wie viel Erfahrung und Aufwand erfordert wird, um die gewählte Architektur korrekt umzusetzen und zu verstehen.
 
 
 
@@ -213,7 +212,7 @@ Eine Schichtenarchitektur teilt die Software in verschiedene Ebenen, sogenannte 
 
 \subsection{SOLID-Prinzipien in einer Schichtenarchitektur}
 
-Der größte Vorteil dieser Architekturart ist eine erzwungene natürliche Trennung von Funktionalitäten durch die horizontale Schichteneinteilung. Somit soll verhindert werden, dass eine Komponente beispielsweise den Zugriff auf die Datenbank und gleichzeitig Businesslogik implementiert. Allerdings ist eine vertikale Trennung nicht gegeben und Module können weiterhin konzeptionell verschieden Aufgaben erfüllen. Dadurch ist es möglich, die Schichteneinteilung einzuhalten, jedoch das \emph{Single-Responsibility-Prinzip} zu brechen. Dadurch ist das \emph{SRP} nur grob in dieser Architektur verankert. Die klare Aufteilung unterstützt den Entwickler ebenfalls Abstraktionen zwischen den Sichten zu definieren. Diese können wiederum als Schnittstellen festgelegt werden, die aufgrund des \emph{Dependency-Inversion-Prinzips} der verantwortlichen Ebene zugewiesen sind. Dies ist häufig die über der Implementierung liegende Ebene, kann davon jedoch abhängig von dem Applikationsfokus abweichen. Im Diagramm \ref{fig:NachDIP} beispielsweise gelten Benutzerinterface- und Datenzugriffsschicht als Details und sie sind somit an die Schnittstellen, welche der mittleren Ebene zugeteilt sind, gebunden. Damit Änderungen an tiefer liegenden Schichten nicht höhere betrifft, sollten diese Schnittstellen zusätzlich durch das \emph{Open-Closed-Prinzip} als geschlossen gelten. Ebenso können die konkreten Implementierungen weiterhin stets mit neuen Funktionalitäten erweitert oder durch andere Module ersetzt werden. Um weiterhin einen SOLID-Ansatz zu verfolgen, sind wegen dem \emph{Interface-Segregation-Prinzip} die Schnittstellen so klein und präzise wie möglich zu designen, damit Schichten nur von ihren wirklich benötigten Funktionen abhängig gemacht werden. Das \emph{DIP}, \emph{OCP} und \emph{ISP} stehen eng miteinander in Verbindung. Eine Schichtenarchitektur hilft durch die Separierung der Ebenen einen Ansatzpunkt für benötigte Abstraktionen zu bilden, jedoch ist die Anwendung der Prinzipien nicht natürlich in diesem Architekturstil eingebaut.  
+Der größte Vorteil dieser Architekturart ist eine erzwungene natürliche Trennung von Funktionalitäten durch die horizontale Schichteneinteilung. Somit soll verhindert werden, dass eine Komponente beispielsweise den Zugriff auf die Datenbank und gleichzeitig Businesslogik implementiert. Allerdings ist eine vertikale Trennung nicht gegeben und Module können weiterhin konzeptionell verschieden Aufgaben erfüllen. Dadurch ist es möglich, die Schichteneinteilung einzuhalten, jedoch das \emph{Single-Responsibility-Prinzip} zu brechen. Dadurch ist das \emph{SRP} nur grob in dieser Architektur verankert. Die klare Aufteilung unterstützt den Entwickler ebenfalls Abstraktionen zwischen den Schichten zu definieren. Diese können wiederum als Schnittstellen festgelegt werden, die aufgrund des \emph{Dependency-Inversion-Prinzips} der verantwortlichen Ebene zugewiesen sind. Dies ist häufig die über der Implementierung liegende Ebene, kann davon jedoch, abhängig von dem Applikationsfokus, abweichen. Im Diagramm \ref{fig:NachDIP} beispielsweise gelten Benutzerinterface- und Datenzugriffsschicht als Details und sie sind somit an die Schnittstellen, welche der mittleren Ebene zugeteilt sind, gebunden. Damit Änderungen an tiefer liegenden Schichten nicht höhere betrifft, sollten diese Schnittstellen zusätzlich durch das \emph{Open-Closed-Prinzip} als geschlossen gelten. Ebenso können die konkreten Implementierungen weiterhin stets mit neuen Funktionalitäten erweitert oder durch andere Module ersetzt werden. Um weiterhin einen SOLID-Ansatz zu verfolgen, sind wegen dem \emph{Interface-Segregation-Prinzip} die Schnittstellen so klein und präzise wie möglich zu designen, damit Schichten nur von ihren wirklich benötigten Funktionen abhängig gemacht werden. Das \emph{DIP}, \emph{OCP} und \emph{ISP} stehen eng miteinander in Verbindung. Eine Schichtenarchitektur hilft durch die Separierung der Ebenen einen Ansatzpunkt für benötigte Abstraktionen zu bilden, jedoch ist die Anwendung der Prinzipien nicht natürlich in diesem Architekturstil eingebaut.  
 
 Das \emph{Liskovsches Substitutionsprinzip} ist von der unterliegenden Architektur unabhängig und bezieht sich auf die Komposition von Klassen und ihre Relationen zueinander. Dadurch beeinflusst eine Architektur diese Richtlinie nicht und kann in den Analysen vernachlässigt werden.
 
@@ -238,7 +237,7 @@ Eigenschaften wie Wartbarkeit und Wiederverwendbarkeit steigen mit dem Einhaltun
 
 %TODO: Wortwiederholung "Adapter"
 
-In der von Alistair Cockburn geprägten Architektur ist der Hauptgedanke die Einteilung von Komponenten in Adapter und Applikationskern. Adapter sind Schnittstellen zwischen externen Systeme und der Businesslogik, wie beispielsweise API-, Datenbank- oder Messaging-Service. Zusätzlich werden sie in primär und sekundär eingeteilt, wobei der Kontrollfluss von den primären Adaptern in die Businesslogik und eventuell weiter über die Sekundäradapter fließt. Somit werden primäre Adapter von außen und sekundäre Adapter durch die Applikation selbst angestoßen. Die Kommunikation zwischen Adapter und Kern geschieht hierbei über abstrakte Interfaces, den sogenannten Ports, welche dem Applikationskern zugeteilt und von diesem definiert werden. Daher wird dieser Ansatz auch \emph{Ports und Adapter Architektur} genannt. Durch diese Aufteilung soll der Fokus auf die Businesslogik verschoben werden. \cite{hex} \cite{Martin.2018} 
+In der von Alistair Cockburn geprägten Architektur ist der Hauptgedanke die Einteilung von Komponenten in Adapter und Applikationskern. Adapter sind Schnittstellen zwischen externen Systemen und der Businesslogik, wie beispielsweise Controller, Datenzugriffsservice oder Messaging-Broker. Zusätzlich werden sie in primär und sekundär eingeteilt, wobei der Kontrollfluss von den primären Adaptern in die Businesslogik und eventuell weiter über die Sekundäradapter fließt. Somit werden primäre Adapter von außen und sekundäre Adapter durch die Applikation selbst angestoßen. Die Kommunikation zwischen Adapter und Kern geschieht hierbei über Interfaces, den sogenannten Ports, welche dem Applikationskern zugeteilt und von diesem definiert werden. Daher wird dieser Ansatz auch \emph{Ports und Adapter Architektur} genannt. Durch diese Aufteilung soll der Fokus auf die Businesslogik gelegt werden. \cite{hex} \cite{Martin.2018} 
 
 In Abbildung \ref{fig:HexagonaleArchitektur} ist neben dem generellen Aufbau auch der Kontrollfluss und Abhängigkeitsverlauf dargestellt. 
 
@@ -282,11 +281,11 @@ Softwareprojekte skalieren meist aufgrund von zusätzlichen Anforderungen und Sp
 
 \section{Fazit und Vergleich von Schichten- und Hexagonaler Architektur} 
 
-Als Ergebnis der Analyse können folgende Bewertungen im Hinblick auf die SOLID-Prinzipien, Testbarkeit, Skalierbarkeit und Einfachheit gebildet werden. Hierbei wurde eine fünfwertige Skala verwendet, welche die natürliche Unterstützung des Architekturstils zur Einhaltung der jeweiligen Aspekte beschreibt. Sie reicht von hoher (grün) bis keine Unterstützung (rot) und soll als Vergleich der Architekturansätze zueinander dienen.
+Als Ergebnis der Analyse können folgende Bewertungen im Hinblick auf die SOLID-Prinzipien, Testbarkeit, Erweiterbarkeit und Erlernbarkeit gebildet werden. Hierbei wurde eine fünfwertige Skala verwendet, welche die natürliche Unterstützung des Architekturstils zur Einhaltung der jeweiligen Aspekte beschreibt. Sie reicht von hoher (grün) bis keine Unterstützung (rot) und soll als Vergleich der Architekturansätze zueinander dienen.
 
 \subsection{Bewertung der Schichtenarchitektur}
 
-Die Schichtenarchitektur bietet kaum eine native Implementierung der SOLID-Prinzipien abgesehen von der Einteilung in Ebenen. Dadurch ergibt sich auch eine geringe Skalierbarkeit der Applikation. Durch den simplen Aufbau der Architektur gewinnt die Software an Übersichtlichkeit solange diese nicht zu komplex wird. Die Auswertung ist in Abbildung \ref{ref:SchichtenarchitekturBewertung} dargestellt.
+Die Schichtenarchitektur bietet kaum eine native Implementierung der SOLID-Prinzipien abgesehen von der Einteilung in Ebenen. Durch die geringe Entkopplung ergibt sich auch eine niedrige Erweiterbarkeit und Testbarkeit der Applikation. Durch den simplen Aufbau der Architektur gewinnt die Software an Übersichtlichkeit solange diese nicht zu komplex wird. Die Auswertung ist in Abbildung \ref{ref:SchichtenarchitekturBewertung} dargestellt.
 
 \begin{figure}[htbp]
 	\includesvg[width=250pt]{img/SchichtenarchitekturBewertung.svg}
@@ -297,7 +296,7 @@ Die Schichtenarchitektur bietet kaum eine native Implementierung der SOLID-Prinz
 
 \subsection{Bewertung der Hexagonalen Architektur}
 
-Dank der Einführung von Ports erhält die Hexagonale Architektur eine natürlich Unterstützung der SOLID-Prinzipien, speziell das \emph{Dependency-Inversion-Prinzip}. Anzumerken ist hierbei, dass auch bei diesem architektonischen Ansatz diese nicht erfüllt sein müssen. Allerdings spricht das für eine inkorrekte Anwendung der \emph{Ports und Adapter Architektur}. Die vereinfachte Implementierung der SOLID-Prinzipien resultiert in erhöhter Testbarkeit und Skalierbarkeit. Da konzeptionell ein hexagonaler Ansatz komplexer ist, leidet die Einfachheit darunter. Das Ergebnis der Analyse wird in Abbildung \ref{fig:HexagonaleArchitekturBewertung} gezeigt.
+Dank der Einführung von Ports erhält die Hexagonale Architektur eine natürlich Unterstützung der SOLID-Prinzipien, speziell das \emph{Dependency-Inversion-Prinzip}. Anzumerken ist hierbei, dass auch bei diesem architektonischen Ansatz diese nicht erfüllt sein müssen. Allerdings spricht das für eine inkorrekte Anwendung der \emph{Ports und Adapter Architektur}. Die vereinfachte Implementierung der SOLID-Prinzipien resultiert in erhöhter Testbarkeit und Erweiterbarkeit. Da konzeptionell ein hexagonaler Ansatz komplexer ist, leidet die Erlernbarkeit darunter. Das Ergebnis der Analyse wird in Abbildung \ref{fig:HexagonaleArchitekturBewertung} gezeigt.
 
 \begin{figure}[htbp]
 	\includesvg[width=250pt]{img/HexagonaleArchitekturBewertung.svg}
@@ -307,9 +306,7 @@ Dank der Einführung von Ports erhält die Hexagonale Architektur eine natürlic
 
 \subsection{Vergleich der beiden Designstrategien}
 
-Während bei der Schichtenarchitektur die verarbeiteten Daten im Zentrum liegen, ist der Fokus einer Hexagonalen Architektur auf den Businessanforderungen. Aus diesem fundamentalen Unterschied und der erarbeiteten Architekturanalyse kann nachfolgendes Fazit gebildet werden. 
-
-Einerseits erleichtert eine Hexagonale Architektur die grundlegende Implementierung der SOLID-Prinzipien, da diese schon tief in der Architektur durch die Einteilung in Ports und Adapter verankert sind. Dank einem höheren Erfüllungsgrad der SOLID-Prinzipien werden die Komponente entkoppelt und erlangen eine höhere Kohäsion. Dies wirkt sich positiv auf die isolierte Testbarkeit und Fehleranfälligkeit bei Anpassungen an der Software aus. Im Vergleich dazu entlastet eine Schichtenarchitektur nur minimal den Entwickler bei Einhaltung der SOLID-Prinzipien. Da eine Hexagonale Architektur nur eine leicht umgestellte Schichtenarchitektur darstellt, können erfahrene Entwickler dennoch auch in einem schichtenbasierten Design alle Richtlinien anwenden, indem die Kommunikation über abstrakte Schnittstellen und Invertierung der Abhängigkeiten stattfindet. Ebenfalls kann die Testbarkeit bei korrekter Implementierung genauso gewährleistet werden wie in einem hexagonalen Ansatz. Die verschiedene Denkweise einer Schichtenarchitektur verleiten Programmierer allerdings entgegen der SOLID-Prinzipien zu entwickeln, da die Datenzugriffsschicht eigentlich nur ein Implementierungsdetail darstellt, dennoch in den Mittelpunkt gerückt wird. \cite{layer.solid} Letztendlich ist die Wahl der Softwarearchitektur abhängig von den Anforderungen. Eine simple CRUD-Anwendung, welche kaum Businesslogik beinhalten soll, ist einfacher mit einer Schichtenarchitektur zu verwirklichen und unter Beachtung der oben genannten Designprinzipien ebenfalls wartbar, testbar und skalierbar. Ein Programm welches hingegen einen größeren Anteil an Businesslogik besitzt, wie zum Beispiel ein Kassensystem, sollte eine Hexagonale Architektur bevorzugen. Dies gewährt einen hohen Fokus auf die eigentliche Lösung der Businessanforderungen und die Skalierbarkeit der Anwendung bei korrekter Entkopplung der Komponenten.
+Während bei der Schichtenarchitektur die verarbeiteten Daten im Zentrum liegen, ist der Fokus einer Hexagonalen Architektur auf den Businessanforderungen. Aus diesem fundamentalen Unterschied und der erarbeiteten Architekturanalyse kann nachfolgendes Fazit gebildet werden. Dank einem höheren Erfüllungsgrad der SOLID-Prinzipien werden die Komponenten entkoppelt und erlangen eine höhere Kohäsion. Dies wirkt sich positiv auf die isolierte Testbarkeit und Fehlertoleranz bei Anpassungen an der Software aus. Im Vergleich dazu entlastet eine Schichtenarchitektur nur minimal den Entwickler bei Einhaltung der SOLID-Prinzipien. Da eine Hexagonale Architektur nur eine leicht umgestellte Schichtenarchitektur darstellt, können erfahrene Entwickler dennoch auch in einem schichtenbasierten Design alle Richtlinien anwenden, indem die Kommunikation über Schnittstellen und Invertierung der Abhängigkeiten stattfindet. Ebenfalls kann die Testbarkeit bei Implementierung der Designprinzipien genauso gewährleistet werden wie in einem hexagonalen Ansatz. Der simple Aufbau einer Schichtenarchitektur könnte dazu führen, dass Programmierer ohne Einhaltung der SOLID-Prinzipien entwickeln, da diese sich im Architekturstil selbst nicht als Grundbaustein widerspiegeln. Im Gegensatz hierzu müssen sich Entwickler bei einer Hexagonalen Architektur zwangsläufig mit einigen wichtigen Design-Prinzipien auseinandersetzen, um mit diesem Architekturstil arbeiten zu können. Dies fördert die nachhaltige Einhaltung der SOLID-Prinzipien und damit der Software Qualität insgesamt. Somit ist der erhöhte Lernaufwand anfangs zwar eine Hürde, aber auf langer Zeit von Vorteil. Letztendlich ist die Wahl der Softwarearchitektur abhängig von den Anforderungen. Eine simple CRUD-Anwendung, welche kaum Businesslogik beinhalten soll, ist einfacher mit einer Schichtenarchitektur zu verwirklichen und unter Beachtung der oben genannten Designprinzipien ebenfalls wartbar, testbar und skalierbar. Ein Programm welches hingegen einen größeren Anteil an Businesslogik besitzt, wie zum Beispiel ein Kassensystem, sollte eine Hexagonale Architektur bevorzugen. Dies gewährt einen hohen Fokus auf die eigentliche Lösung der Businessanforderungen und die Erweiterbarkeit der Anwendung bei korrekter Entkopplung der Komponenten.
 
 % Fazit --->
 
